--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,18 @@
-logging.level.org.springframework=debug
-spring.datasource.url=jdbc:h2:mem:newdb;
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=none
+logging.level.org.springframework=info
+logging.level.com.example=debug
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.security.user.name=admin
+spring.security.user.password=password
+
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/Book
+
+spring.datasource.username=postgres
+
+spring.datasource.password=jessinedstem
+
+spring.datasource.driver-class-name=org.postgresql.Driver
